fixed layout regression + ff layout issue

--- a/src/modules/transactions/less/transaction.less
+++ b/src/modules/transactions/less/transaction.less
@@ -45,12 +45,11 @@
 
   .transaction-content {
     display: flex;
-    flex: 1;
+    flex-direction: column;
     width: calc(~"100% - 3px");
 
     .transaction-content-main {
       display: flex;
-      flex: 1;
       width: calc(~"100% - 3px");
 
       .transaction-summary {
